--- a/mssc-brewery/.gitignore
+++ b/mssc-brewery/.gitignore
@@ -29,3 +29,26 @@ build/
 
 ### VS Code ###
 .vscode/
+
+## Maven
+*/target/*
+
+######################
+# Package Files
+######################
+*.jar
+*.war
+*.ear
+*.db
+
+######################
+# Others
+######################
+*.class
+*.*~
+*~
+.merge_file*
+######################
+# Maven Wrapper
+######################
+!.mvn/wrapper/maven-wrapper.jar
